--- a/static/root/index.html
+++ b/static/root/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>kathleenfrench.co</h1>
+    <img src="/assets/me.png" alt="moi" />
     <script src="/js/main.js"></script>
 </body>
 </html>
